2005-03-26  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablecombobox.c
	* libgimp/gimpimagecombobox.c: accept DND of image / drawable IDs.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptoolbox-image-area.c: added a hint about XDS to
	the tooltip, but only if compiled for X11.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_colorblind.c: use the same LUT for all color
	channels. Do a binary search in the LUT for the backward
	transformation.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_colorblind.c: applied a modified version of
	a patch by Gautier Portet that introduces a LUT for the gamma
	correction (bug #101256). Also moved constants out of the
	CdisplayColorblind struct.

2005-03-26  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: disconnect from the config in dispose
	instead of in finalize.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c: better error message (bug #171646).

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockable.c (gimp_dockable_add): initialize the
	tab style to a supported one. Fixes bug #171567.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c: applied patch from David Costanzo that
	initializes unspecified pixels in RLE bitmaps. Fixes bug #171562.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c
	* app/widgets/gimpfiledialog.[ch]: moved overwrite confirmation
	dialog to app/widgets.

	* app/widgets/gimpdnd-xds.c: set "Untitled.xcf" as default name
	for untitled images; ask for confirmation before overwriting a
	local file.

2005-03-25  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/emboss.c: fix usage of RGBA data,
	change to premultiplied alpha for embossing, hopefully
	fixes bug #72864.

2005-03-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimpmarshal.list: added VOID: OBJECT, OBJECT.

	* app/widgets/gimpview.[ch]: pass old and new viewable in the